--- a/MobileMvxApp/BLE.Client.Droid/Properties/AndroidManifest.xml
+++ b/MobileMvxApp/BLE.Client.Droid/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="csl.CS710Sfulldemo.demo" android:installLocation="auto" android:versionName="0.0.13" android:versionCode="13">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="csl.CS710Sfulldemo.demo" android:installLocation="auto" android:versionName="0.0.1" android:versionCode="1">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-	<application android:label="CS710S C# Demo" android:icon="@drawable/icon" android:theme="@style/MyTheme"></application>
+	<application android:label="CS710S CS108" android:icon="@drawable/icon" android:theme="@style/MyTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
