--- a/MobileMvxApp/BLE.Client.iOS/BLE.Client.iOS.csproj
+++ b/MobileMvxApp/BLE.Client.iOS/BLE.Client.iOS.csproj
@@ -13,7 +13,7 @@
     <AssemblyName>BLEClientiOS</AssemblyName>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <ProvisioningType>automatic</ProvisioningType>
+    <ProvisioningType>manual</ProvisioningType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
