--- a/MobileMvxApp/BLE.Client.UWP/BLE.Client.UWP.csproj
+++ b/MobileMvxApp/BLE.Client.UWP/BLE.Client.UWP.csproj
@@ -8,7 +8,7 @@
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BLE.Client.UWP</RootNamespace>
-    <AssemblyName>BLE.Client.UWP</AssemblyName>
+    <AssemblyName>CS710S RFID Reader App</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.20348.0</TargetPlatformVersion>
@@ -117,7 +117,6 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="BLE.Client.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\1024x768.png" />
