--- a/MobileMvxApp/BLE.Client/BLE.Client.csproj
+++ b/MobileMvxApp/BLE.Client/BLE.Client.csproj
@@ -50,7 +50,7 @@
     <Compile Remove="ViewModels\DescriptorListViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Library\CSLibrary\CSLibrary-NETStandard.csproj" />
+    <ProjectReference Include="..\..\Library\CSLibrary\CSLibraryBT5-NETStandard.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="PagesViewModelsSet\SpecialFuction\ImpinjSpecialFeatures\PageImpinjSpecialFeaturesProtectedMode.xaml.cs">
