--- a/MobileMvxApp/BLE.Client/BLE.Client.csproj
+++ b/MobileMvxApp/BLE.Client/BLE.Client.csproj
@@ -7,11 +7,8 @@
 
   <ItemGroup>
     <Compile Remove="PagesViewModelsSet\NewFolder1\**" />
-    <Compile Remove="PagesViewModelsSet\NewFolder\**" />
     <EmbeddedResource Remove="PagesViewModelsSet\NewFolder1\**" />
-    <EmbeddedResource Remove="PagesViewModelsSet\NewFolder\**" />
     <None Remove="PagesViewModelsSet\NewFolder1\**" />
-    <None Remove="PagesViewModelsSet\NewFolder\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,6 +49,9 @@
     <ProjectReference Include="..\..\Library\CSLibrary\CSLibrary2024-NETStandard.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="PagesViewModelsSet\SpecialFuction\ASYGN\PageAsygnInventory.xaml.cs">
+      <DependentUpon>PageAsygnInventory.xaml</DependentUpon>
+    </Compile>
     <Compile Update="PagesViewModelsSet\SpecialFuction\ImpinjSpecialFeatures\PageImpinjSpecialFeaturesProtectedMode.xaml.cs">
       <DependentUpon>PageImpinjSpecialFeaturesProtectedMode.xaml</DependentUpon>
     </Compile>
@@ -65,6 +65,9 @@
     </Compile>
     <Compile Update="PagesViewModelsSet\SpecialFuction\LEDTag\LEDTag.xaml.cs">
       <DependentUpon>LEDTag.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="PagesViewModelsSet\SpecialFuction\LEDTag\PageLEDTagWithGeiger.xaml.cs">
+      <DependentUpon>PageLEDTagWithGeiger.xaml</DependentUpon>
     </Compile>
     <Compile Update="PagesViewModelsSet\SpecialFuction\LEDTag\PageLEDTagWithInventory.xaml.cs">
       <SubType>Code</SubType>
