--- a/MobileMvxApp/BLE.Client.Droid/BLE.Client.Droid.csproj
+++ b/MobileMvxApp/BLE.Client.Droid/BLE.Client.Droid.csproj
@@ -133,6 +133,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
       <Version>7.0.1</Version>
     </PackageReference>
+    <PackageReference Include="MQTTnet">
+      <Version>4.3.3.952</Version>
+    </PackageReference>
     <PackageReference Include="MvvmCross">
       <Version>7.1.2</Version>
     </PackageReference>
