--- a/MobileMvxApp/BLE.Client.UWP/BLE.Client.UWP.csproj
+++ b/MobileMvxApp/BLE.Client.UWP/BLE.Client.UWP.csproj
@@ -231,6 +231,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.Connectivity">
       <Version>6.1.1</Version>
     </PackageReference>
+    <PackageReference Include="MQTTnet">
+      <Version>4.3.3.952</Version>
+    </PackageReference>
     <PackageReference Include="MvvmCross">
       <Version>7.1.2</Version>
     </PackageReference>
