--- a/MobileMvxApp/BLE.Client.iOS/Info.plist
+++ b/MobileMvxApp/BLE.Client.iOS/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
+		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -50,6 +51,6 @@
 	<key>XSAppIconAssets</key>
 	<string>Media.xcassets/AppIcon.appiconset</string>
 	<key>CFBundleVersion</key>
-	<string>76</string>
+	<string>94</string>
 </dict>
 </plist>
