--- a/MobileMvxApp/BLE.Client.UWP/BLE.Client.UWP.csproj
+++ b/MobileMvxApp/BLE.Client.UWP/BLE.Client.UWP.csproj
@@ -260,13 +260,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BLE.Client\BLE.Client-NETStandard20.csproj">
-      <Project>{c4696738-7ef1-426c-a4b5-fcdd5735c9da}</Project>
-      <Name>BLE.Client-NETStandard20</Name>
+    <ProjectReference Include="..\BLE.Client\BLE.Client.csproj">
+      <Project>{1bb029e4-a2c7-46b4-9e8f-f356ec322125}</Project>
+      <Name>BLE.Client</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="BLE.Client.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
