--- a/MobileMvxApp/BLE.Client.iOS/BLE.Client.iOS.csproj
+++ b/MobileMvxApp/BLE.Client.iOS/BLE.Client.iOS.csproj
@@ -328,4 +328,9 @@
     <BundleResource Include="Resources\beep-05.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadWrongLinkerErrorInfoBarBLEClientiOSHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
